--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,6 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          sudo chmod +x ./build.sh
-          ./build.sh
+         sudo chmod +x ./build.sh
+         sudo ./build-ubuntu.sh
+        
       
