--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,12 @@ jobs:
         run: |
          sudo chmod +x ./build.sh
          sudo ./build-ubuntu.sh
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.3
+        with:
+         # Artifact name
+          name: build.zip
+         # A file, directory or wildcard pattern that describes what to upload
+          path: ./target/
         
       
