--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,8 +34,15 @@ jobs:
         uses: actions/upload-artifact@v2.2.3
         with:
          # Artifact name
-          name: build.zip
+          name: target-linux
          # A file, directory or wildcard pattern that describes what to upload
           path: ./target/
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.3
+        with:
+         # Artifact name
+          name: bin-linux
+         # A file, directory or wildcard pattern that describes what to upload
+          path: ./bin/
         
       
